fix: Change Footer Layout on Mobile View

--- a/_sass/teatime.scss
+++ b/_sass/teatime.scss
@@ -684,7 +684,6 @@ section {
         background-color: $primary-color;
         padding-top: 7.5rem;
         padding-bottom: 7.5rem;
-        margin-bottom: 64px;
         margin-top: 56px;
         -webkit-box-align: center;
         -ms-flex-align: center;
@@ -1516,7 +1515,7 @@ footer {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     width: 100%;
-    height: 64px;
+    min-height: 64px;
     background-color: $base-color-tint;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1528,10 +1527,7 @@ footer {
     -ms-flex-align: center;
         align-items: center;
     font-size: 0.875rem;
-    padding-left: calc((100vw - #{$wide-width}) / 2);
-    padding-right: calc((100vw - #{$wide-width}) / 2);
-    position: absolute;
-    bottom: 0;
+    padding: 1rem calc((100vw - #{$wide-width}) / 2);
 
     span a {
         margin-right: 1.5rem;
@@ -1541,8 +1537,13 @@ footer {
             font-weight: 800;
         }
 
-        i {
-            font-size: 1rem !important;
+        i.bx {
+            font-size: 1.125rem;
+            margin-right: 0.25rem;
+        }
+
+        &#insta-link i.bx {
+            font-size: 1.25rem;
         }
 
         &:last-child {
@@ -1551,26 +1552,17 @@ footer {
     }
 
     @include media-query($wide-width) {
-        padding-left: calc((100vw - #{$normal-width}) / 2);
-        padding-right: calc((100vw - #{$normal-width}) / 2);
+        padding: 1rem calc((100vw - #{$normal-width}) / 2);
     }
 
     @include media-query($normal-width) {
-        padding: 0 1rem;
+        padding: 1rem;
 
         span a {
             margin-right: 0.75rem;
 
-            &#mail-link .link-copy {
+            .link-copy {
                 display: none;
-            }
-
-            &#rss-link {
-                margin-left: 0.5rem;
-
-                .link-copy {
-                    display: none;
-                }
             }
         }
     }
@@ -1581,12 +1573,18 @@ footer {
         span a {
             margin-right: 0.5rem;
 
-            i {
-                font-size: 0.875rem;
-            }
-
             &#rss-link {
                 margin-left: 0;
+
+                i.bx {
+                    margin-right: 0;
+                }
+            }
+
+            &#home-page {
+                display: block;
+                font-size: 0.875rem;
+                margin-bottom: 0.125rem;
             }
         }
     }
